@@ -1,3 +1,6 @@
 Fluids_EN = {
 	Fluid_Name_Urine = "Urine",
+	Fluid_Name_FilteredUrine = "Filtered Urine",
+	Fluid_Name_LiquidLaxative = "Laxative",
+	Fluid_Name_LiquidDiuretic = "Diuretic",
 }
