@@ -15,6 +15,7 @@ module BathroomFunctions
             whitelist = true,
             categories
             {
+                Beverage,
             }
         }
 
@@ -23,6 +24,68 @@ module BathroomFunctions
             maxEffect         = Medium,
             minAmount         = 0.2,
             diluteRatio       = 0.1,
+        }
+    }
+
+    fluid FilteredUrine
+    {
+        ColorReference  = Khaki,
+        DisplayName     = Fluid_Name_FilteredUrine,
+
+        Categories
+        {
+            Hazardous,
+        }
+
+        BlendWhiteList
+        {
+            whitelist = true,
+            categories
+            {
+                Beverage,
+            }
+        }
+    }
+
+    fluid LiquidLaxative
+    {
+        ColorReference  = Cola,
+        DisplayName     = Fluid_Name_LiquidLaxative,
+
+        Categories
+        {
+            Beverage,
+            Industrial,
+        }
+
+        BlendWhiteList
+        {
+            whitelist = true,
+            categories
+            {
+                Beverage,
+            }
+        }
+    }
+
+    fluid LiquidDiuretic
+    {
+        ColorReference  = Khaki,
+        DisplayName     = Fluid_Name_LiquidDiuretic,
+
+        Categories
+        {
+            Beverage,
+            Industrial,
+        }
+
+        BlendWhiteList
+        {
+            whitelist = true,
+            categories
+            {
+                Beverage,
+            }
         }
     }
 }
